tests/should_fail/sealed.stderr
error: This trait methods overrides a sealed implementation.
  --> sealed.rs:22:5
   |
22 |     fn g(self, x: Int) -> Int {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: This sealed implementation is overriden.
  --> sealed.rs:10:5
   |
10 |     fn g(self, x: Int) -> Int {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

